infra/prow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: prow
  namespace: prow
spec:
  tls:
  - hosts:
    - prow.takutakahashi.dev
    secretName: prow-tls
  defaultBackend:
    service:
      name: deck
      port:
        number: 80
  rules:
  - host: prow.takutakahashi.dev
    http:
      paths:
      - backend:
          service:
            name: deck
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: hook
            port:
              number: 8888
        path: /hook
        pathType: Prefix
